--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;400;500;700&display=swap')
-
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@600&family=Poppins:wght@300;400;500;700&display=swap');
 
 *{
     padding: 0;
     margin:0;
-    /* font-family: "Poppins", sans-serif; */
+    font-family: "Poppins", sans-serif;
 }
+
 body{
     background-color: black;
 }
@@ -102,9 +102,7 @@ nav button{
 .btn{
     padding: 3px 8px;
     font-weight: 500;
-    /* font-weight: bold; */
     color: white;
-    /* background-color: rgba(76, 75, 75, 0.081); */
     background-color: rgba(248, 243, 243, 0.021);
     border: 1px solid rgba(255, 255, 255, 0.238);
     border-radius: 0.25rem;
@@ -120,9 +118,8 @@ nav button{
 .btn-red{
     background-color: red;
     color: white;
-    /* padding: 3px 24px; */
-    /* padding: 15px 70px 16px 34px; */
-    padding: 17px 26px 16px 26px;
+    align-self: center;
+    padding: 14px 26px 14px 26px;
     font-size: 24px;
     border-radius: 0.25rem;
 }
@@ -143,7 +140,7 @@ nav button{
 .main input{
     font-weight: 500;
     color: white;
-    padding: 20px 188px 20px 16px;
+    padding: 19px 188px 19px 16px;
     font-size: 16px;
     border-radius: 0.25rem; 
     background-color:  rgba(26, 23, 23, 0.65);
@@ -154,6 +151,39 @@ nav button{
 .first{
     display: flex;
     justify-content: center;
-    max-width: 50vw;
+    max-width: 70vw;
     margin: auto;
+    color: white;
+    align-items: center;
+}
+
+.secImg{
+    position: relative;
+}
+
+.secImg img{
+    width: 32vw;
+    position: relative;
+    z-index: 10;
+}
+
+.secImg video{
+    position: absolute;
+    top: 70px;
+    right: 0;
+}
+
+section.first > div{
+    display: flex;
+    flex-direction: column;
+}
+
+section.first > div :nth-child(1){
+    font-size: 46px;
+    font-weight: bolder;
+}
+
+section.first > div :nth-child(2){
+    font-size: 21px;
+    
 }
