--- a/style.css
+++ b/style.css
@@ -50,6 +50,14 @@ nav button{
     z-index: 10;
 }
 
+/* signIn  */
+.btn-red-sm:hover{
+    background-color: #c11119 !important;
+}
+/* signIn  */
+.btn-red-sm{
+    transition: background-color 250ms ease-out;
+}
 .hero{
     font-family: "Martel Sans", sans-serif;
     font-weight: 600;
@@ -114,18 +122,23 @@ nav button{
     color: white;
 }
 
-
+.btn-red:hover{
+    background-color: #c11119;
+}
 .btn-red{
+    transition: background-color 250ms ease-in;
     background-color: red;
     color: white;
     align-self: center;
-    padding: 14px 26px 14px 26px;
-    font-size: 24px;
+    padding: 4px 22px 4px 18px;
+    font-size: 20px;
     border-radius: 0.25rem;
+    text-align: center;
 }
 
+
 .btn-red .gst{
-    padding-left: 12px;
+    padding-left: 6px;
     font-size: 24px;
 }
 
@@ -138,9 +151,11 @@ nav button{
 }
 
 .main input{
+    text-align: left;
+    justify-content: center;
     font-weight: 500;
     color: white;
-    padding: 19px 188px 19px 16px;
+    padding: 10px 120px 10px 14px;
     font-size: 16px;
     border-radius: 0.25rem; 
     background-color:  rgba(26, 23, 23, 0.65);
@@ -152,7 +167,7 @@ nav button{
     display: flex;
     justify-content: center;
     max-width: 70vw;
-    margin: auto;
+    margin: 84px auto;
     color: white;
     align-items: center;
 }
@@ -186,4 +201,93 @@ section.first > div :nth-child(1){
 section.first > div :nth-child(2){
     font-size: 21px;
     
+}
+
+/* FAQ STYLE  */
+section .container{
+    margin-bottom:4rem;
+}
+.faq{
+    background-color: black;
+    color: white;
+    padding: 34px;
+    max-width: 70vw;
+    margin: 82px auto;
+}
+.faq h2{
+    text-align: center;
+    font-size: 46px;
+}
+
+.faqbox:hover{
+    background-color: #414141;
+    color: white;
+
+}
+.faqbox{
+    transition: all 250ms ease-out;
+    display: flex;
+    font-size: 26px;
+    justify-content: space-between;
+    background-color: #2d2d2d;
+    padding: 28px;
+    margin: 10px auto;
+    cursor: pointer;
+}
+
+.faqbox svg{
+    /* font-size: 30px; */
+    color: white;
+}
+.lgstart{
+    position: relative;
+    display: flex;
+    font-family: "Martel Sans", sans-serif;
+    /* font-weight: 400; */
+    align-items: center;
+    justify-content: center;
+    color: white;
+    flex-direction: column;
+}
+
+.lst-hero{
+    display: flex;
+    padding-top: 20px;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+div input{
+    text-align: left;
+    justify-content: center;
+    font-weight: 500;
+    color: white;
+    padding: 10px 120px 10px 14px;
+    font-size: 16px;
+    border-radius: 0.25rem; 
+    background-color:  rgba(26, 23, 23, 0.65);
+    border: 1px solid rgba(246, 238, 238, 0.46); 
+}
+
+/* hover effect  */
+.btn-enred:hover{
+    background-color: #c11119;
+}
+/* hover effect  */
+.btn-enred{
+    transition: background-color 250ms ease-out;
+    background-color: red;
+    color: white;
+    align-self: center;
+    padding: 4px 22px 4px 18px;
+    font-size: 20px;
+    border-radius: 0.25rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.btn-enred .gst{
+    padding-left: 6px;
+    font-size: 24px; 
 }
